--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-yaml": "^2.0.0",
     "csv-parse": "^4.8.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
